# infinigpu

./: .gitignore  Cargo.toml  LICENSE  README.md
client/: infinipixel.html
crates/infinigpu-abi/: Cargo.toml  cbindgen.toml
crates/infinigpu-abi/src/: ids.rs  lib.rs  regs.rs  wire.rs
crates/infinigpu-device/: Cargo.toml
crates/infinigpu-device/src/: config.rs  dispatch.rs  dma.rs  drain.rs  lib.rs  mailbox.rs  profile.rs  resource.rs
crates/infinigpu-device/tests/: loopback.rs  pr4_vfio_user.rs
crates/infinigpu-guest-conformance/: Cargo.toml  build.rs
crates/infinigpu-guest-conformance/csrc/: guest_ring_ref.c
crates/infinigpu-guest-conformance/src/: lib.rs
crates/infinigpu-guest-conformance/tests/: dynamic_state_resolve.rs  forwarded_interop.rs  interop.rs
crates/infinigpu-hal/: Cargo.toml
crates/infinigpu-hal/src/: lib.rs
crates/infinigpu-nvml/: Cargo.toml
crates/infinigpu-nvml/src/: lib.rs
crates/infinigpu-pixel/: Cargo.toml
crates/infinigpu-pixel/src/: lib.rs
crates/infinigpu-replay/: Cargo.toml
crates/infinigpu-replay/examples/: gen_mesh_spv.rs  gen_tex_spv.rs
crates/infinigpu-replay/src/: lib.rs  process.rs  shaders.rs
crates/infinigpu-ring/: Cargo.toml
crates/infinigpu-ring/src/: lib.rs
crates/infinigpu-ring/tests/: loom_ring.rs
crates/infinigpu-sched/: Cargo.toml
crates/infinigpu-sched/src/: lib.rs
crates/infinigpu-viewer/: Cargo.toml
crates/infinigpu-viewer/src/: headless.rs  input.rs  main.rs  stream.rs  window.rs
deploy/: Dockerfile.builder  build-into.sh  docker-compose.gpu.yml
docs/: 00-motivation.md  3D-COMPLETENESS-ROADMAP.md  DEPLOY-DEV.md  ERRATA.md  FIX-D-ZEROCOPY.md  IMPLEMENTATION-LOG.md  INTEGRATION.md  MICRO-OPT-PLAYBOOK.md  PERF-AUDIT.md  PHASE-0-PROTOTYPE.md  RISKS.md  ROADMAP.md  SCENARIOS.md  qemu-vfio-user.md
docs/adr/: 2D-ACCEL-IMPLEMENTATION.md  3D-ACCEL-IMPLEMENTATION.md  CLIENT-PLANE-COMPOSITOR.md  GUEST-ICD-IMPLEMENTATION.md
docs/decisions/: 0000-template.md  0001-host-device-seam-vfio-user.md  0002-core-sharing-model-api-remoting.md  0003-process-topology-and-isolation.md  0004-wire-protocol-and-shared-crate.md  0005-guest-drivers-and-rust-c-split.md  0006-cross-vm-fence-sync-design.md  0007-vdi-capacity-manager-and-scheduler.md  0008-vendor-agnostic-host-abstraction.md  0009-infinipixel-remote-protocol.md  0010-client-side-offload-split-rendering.md  0011-client-delegation-execution-protocol.md  README.md
docs/reference/: books-catalog.md  books-deep-notes.md
docs/research/: 01-qemu-device-model.md  02-gpu-sharing-taxonomy.md  03-windows-wddm-guest.md  04-linux-drm-guest.md  05-rust-driver-ecosystem.md  06-data-plane-and-host-gpu.md  07-verify-device-seam.md  08-windows-wddm-render-deep.md  09-presentation-latency.md  10-security-isolation.md  11-wire-protocol-design.md  12-rust-linux-drm-verify.md  13-redteam-showstoppers.md  14-fence-sync-design.md  15-windows-m3-ddi-concrete.md  16-vdi-workload-and-host-scheduler.md  17-guest-intelligence-and-video-offload.md  18-remote-protocol-display-datapath.md  19-remote-protocol-io-and-integration.md  20-vendor-agnostic-host-hal.md  21-cross-vendor-media-codec.md  22-perceptual-hvs-compression.md  23-perceived-latency-and-adaptive-control.md  24-qemu-device-implementation-spec.md  25-device-mechanics-book-grounding.md  26-client-offload-split-rendering.md  27-client-capability-negotiation-and-resilience.md  28-guest-pci-driver-handread.md  29-dma-and-kvm-device-model-handread.md  30-client-delegation-instruction-set-and-wire.md  31-client-delegation-negotiation-latency-bandwidth.md  99-synthesis.md  README.md
docs/site/: index.html
docs/spikes/: venus-nvidia-a5000.md
guest/icd/: README.md  build.sh  infinigpu_cmd_buffer.c  infinigpu_coherency_test.c  infinigpu_descriptor.c  infinigpu_device.c  infinigpu_forwarded.c  infinigpu_forwarded.h  infinigpu_icd.c  infinigpu_image.c  infinigpu_instance.c  infinigpu_kmd.c  infinigpu_kmd.h  infinigpu_memory.c  infinigpu_mesh_spv.h  infinigpu_mesh_test.c  infinigpu_physical_device.c  infinigpu_pipeline.c  infinigpu_private.h  infinigpu_sync.c  infinigpu_tex_spv.h  infinigpu_tex_test.c  infinigpu_tri_spv.h  infinigpu_tri_test.c  infinigpu_wsi.c  infinigpu_wsi_test.c  meson.build  meson.wrapper.build  stage-icd.sh
guest/include/: abi_conformance.c  infinigpu_abi.h  infinigpu_drm.h
guest/linux/: Makefile  dkms.conf  infinigpu.c  install.sh  submit3d_test.c
guest/windows/: README.md
guest/windows/infinigpu-idd/: Driver.cpp  HostLink.h  infinigpu-idd.inf  infinigpu-idd.vcxproj
scripts/: build-qemu-vfio-user.sh  gen-abi-header.sh  guest-driver-test.sh  guest-enumerate.sh  guest-kms-pixel-test.sh  guest-kms-test.sh  infinipixel-test.sh  qemu-vfio-user-boot.sh  smoke-qemu-device.sh  spike-venus-nvidia.sh  viewer-headless-test.sh
