[package]
name = "infinigpu-sched"
description = "The infinigpu VDI GPU broker (ADR-0007): fail-closed admission + VRAM ledger + weighted-fair-share token-bucket scheduler. GPU-agnostic, unit-testable without a GPU."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
log = "0.4"
